# json_converter

./: README.md  converter_JSON  pyproject.toml  requirements.txt  setup.py
Test5/: output.json
Test5/input/: root.csv  root_address.csv  root_metadata.json
Test6/input/: root_logs.csv  root_logs_last_errors_metadata.json  root_system_services_config_retry_policy_metadata.json  root_system_services_endpoints.csv  root_system_services_metadata.json  root_system_services_metrics_requests_last_24h.csv  root_system_services_metrics_requests_last_24h_metadata.json  root_system_services_metrics_requests_metadata.json  root_system_services_nodes_queue.csv  root_users.csv  root_users_profile.csv  root_users_profile_preferences.csv  root_users_profile_preferences_notifications.csv  root_users_profile_roles.csv  root_users_sessions.csv  root_users_sessions_metadata.json
src/: converter.py  converter_CSV.py  converter_JSON.py  json_to_tables.py  tables_to_json.py  utils.py  validator.py
src/json_converter/: converter.py  converter_CSV.py  converter_JSON.py  utils.py
src/json_converter.egg-info/: PKG-INFO  SOURCES.txt
tests/Test1/: input.json  run.py
tests/Test1/out_8ad7e8c9-c727-4b78-adda-139e4bde9832/: root.csv  root_address.csv  root_orders.csv  root_orders_items.csv
tests/Test1/output/: root.csv  root_address.csv  root_orders.csv  root_orders_items.csv  root_test.csv  root_test_metadata.json
tests/Test10/: output.json
tests/Test11/: output.json
tests/Test2/: input.json  run.py  schema.json
tests/Test3/: input.json  out.json  output.json  run.py  schema.json
tests/Test4/: out.json  output.json  output2.json  run.py
tests/Test5/: run.py
tests/Test6/: input.json  run.py
tests/Test7/: output.json  run.py
tests/Test8/: input.json  output.json  run.py
tests/Test9/: input.json
(+117 files in other folders)
