[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "json-converter"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
    "pandas",
    "jsonschema"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "json_converter.__version__" }
